<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.uta.se.profilebuddy.AddLocation" >

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/action_new"/>
    <item
        android:id="@+id/action_discard"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_discard"
        android:visible="false"/>
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/action_edit"
        android:visible="false"/>

</menu>