<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <EditText
        android:id="@+id/edit_title_add_location_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/edit_title_hint_add_location_one"
        android:inputType="textCapWords" />

    <AutoCompleteTextView
        android:id="@+id/auto_edit_address_add_location_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_title_add_location_activity"
        android:layout_marginTop="40dp"
        android:completionThreshold="6"
        android:ems="10"
        android:hint="@string/edit_search_hint_add_location_one" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/auto_edit_address_add_location_activity"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_label_add_location_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="6dp"
            android:labelFor="@+id/spinner_mode_add_location_activity"
            android:text="@string/text_label_add_location_fragment"
            android:textColor="#808080"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_mode_add_location_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/values_mode_location_fragment"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>